--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="display">
-        <span class="result">0</span>
+        <span class="result"></span>
       </div>
       <div class="buttons">
         <div class="row">
